cmake_minimum_required(VERSION 2.8.11)
project(RadiumDB)

include("Integrate.cmake")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${RadiumDB_SOURCE_DIR}/dist)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${RadiumDB_SOURCE_DIR}/dist)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${RadiumDB_SOURCE_DIR}/dist)

rcf_addlocation(RADONFRAMEWORK "git" "https://github.com/tak2004/RadonFramework.git")
Integrate(RADONFRAMEWORK "Radon framework" "RADONFRAMEWORK_HOME")

OPTION(RADIUMDB_BUILD_RESOURCETEST "Enable the resource test" ON)

AddSourceDirectoryRecursive(sharedenginesrclist "src" "Source")
AddHeaderDirectoryRecursive(sharedenginehdrlist "include/RadiumDB" "Includes")
set(RADIUMDB_FILES ${sharedenginesrclist} ${sharedenginehdrlist})

option(RADIUMDB_ADD_MEMORY_DOCUMENTS "Add memory document implementation." OFF)
if(RADIUMDB_BUILD_RESOURCETEST)
    set(RADIUMDB_ADD_MEMORY_DOCUMENTS ON CACHE BOOL "Add memory document implementation." FORCE)
endif()
if (RADIUMDB_ADD_MEMORY_DOCUMENTS)
	AddSourceDirectoryRecursive(sharedenginesrclist "modules/MemoryDocument" "Source\\MemoryDocument")
	AddHeaderDirectoryRecursive(sharedenginehdrlist "modules/MemoryDocument" "Includes\\MemoryDocument")
	set(RADIUMDB_FILES ${RADIUMDB_FILES} ${sharedenginesrclist} ${sharedenginehdrlist})
endif()

option(RADIUMDB_ADD_JSON_DOCUMENTS "Add JSON document implementation." OFF)
if(RADIUMDB_BUILD_RESOURCETEST)
    set(RADIUMDB_ADD_JSON_DOCUMENTS ON CACHE BOOL "Add JSON document implementation." FORCE)
endif()
if (RADIUMDB_ADD_JSON_DOCUMENTS)
	AddSourceDirectoryRecursive(sharedenginesrclist "modules/JSONDocument" "Source\\JSONDocument")
	AddHeaderDirectoryRecursive(sharedenginehdrlist "modules/JSONDocument" "Includes\\JSONDocument")
	set(RADIUMDB_FILES ${RADIUMDB_FILES} ${sharedenginesrclist} ${sharedenginehdrlist})
endif()

option(RADIUMDB_ADD_BINARY_DOCUMENTS "Add binary document implementation." OFF)
if(RADIUMDB_BUILD_RESOURCETEST)
    set(RADIUMDB_ADD_BINARY_DOCUMENTS ON CACHE BOOL "Add binary document implementation." FORCE)
endif()
if (RADIUMDB_ADD_BINARY_DOCUMENTS)
	AddSourceDirectoryRecursive(sharedenginesrclist "modules/BinaryDocument" "Source\\BinaryDocument")
	AddHeaderDirectoryRecursive(sharedenginehdrlist "modules/BinaryDocument" "Includes\\BinaryDocument")
	set(RADIUMDB_FILES ${RADIUMDB_FILES} ${sharedenginesrclist} ${sharedenginehdrlist})
endif()

option(RADIUMDB_ADD_DOCUMENT_COMPRESSOR "Add document de/compression." OFF)
if(RADIUMDB_BUILD_RESOURCETEST)
    set(RADIUMDB_ADD_DOCUMENT_COMPRESSOR ON CACHE BOOL "Add document de/compression." FORCE)
endif()
if (RADIUMDB_ADD_DOCUMENT_COMPRESSOR)
	AddSourceDirectoryRecursive(sharedenginesrclist "modules/DocumentCompressor" "Source\\DocumentCompressor")
	AddHeaderDirectoryRecursive(sharedenginehdrlist "modules/DocumentCompressor" "Includes\\DocumentCompressor")
	set(RADIUMDB_FILES ${RADIUMDB_FILES} ${sharedenginesrclist} ${sharedenginehdrlist})
endif()

Generate(MODULE RADIUMDB RadiumDB "RadiumDB")
if (RADIUMDB_ADD_JSON_DOCUMENTS)
	AddPublicInclude(RADIUMDB "${RadiumDB_SOURCE_DIR}/modules")	
endif()
AddPublicInclude(RADIUMDB "${RadiumDB_SOURCE_DIR}/include")
AddDependency(RADIUMDB RadonFramework)
Finalize(RADIUMDB)

if(RADIUMDB_BUILD_RESOURCETEST)
	add_subdirectory(tests/ResourceTest)
endif()